Restore `align-issue-labels` (#5538)

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -4,7 +4,7 @@
 	flex-wrap: wrap;
 }
 
-.rgh-align-issue-labels .js-issue-row .labels {
+.rgh-align-issue-labels .js-issue-row .lh-default.d-block.d-md-inline { /* Labels */
 	order: 1;
 }
 
